ingress/traefik/stackrox_traefik_crd.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingressroute
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.dockr.life`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stackrox-ingresstcp
  namespace: stackrox
spec:
  entryPoints:
    - tcp
  routes:
    - match: HostSNI(`stackrox.dockr.life`)
      services:
        - name: central
          port: 443
  tls:
    passthrough: true
